objects/BrowseKnowledge__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <description>Product categories</description>
        <label>Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_Description__c</fullName>
        <label>Link Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <description>link for the articles</description>
        <label>Link</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_No__c</fullName>
        <description>Order for the Kb articles</description>
        <label>Order No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <customSettingsType>List</customSettingsType>
    <description>Used for the community browse knowledge</description>
    <label>BrowseKnowledge</label>
</CustomObject>